--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "ethers": "^5.7.2",
     "next": "14.2.7",
+    "particles.js": "^2.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
